undo aggressive autoformatting