@@ -136,10 +136,7 @@ class DefaultJobPersistenceTest {
     container.close();
   }
 
-  private static Attempt createAttempt(final long id,
-                                       final long jobId,
-                                       final AttemptStatus status,
-                                       final Path logPath) {
+  private static Attempt createAttempt(final long id, final long jobId, final AttemptStatus status, final Path logPath) {
     return new Attempt(
         id,
         jobId,
@@ -152,10 +149,7 @@ class DefaultJobPersistenceTest {
         NOW.getEpochSecond());
   }
 
-  private static Attempt createUnfinishedAttempt(final long id,
-                                                 final long jobId,
-                                                 final AttemptStatus status,
-                                                 final Path logPath) {
+  private static Attempt createUnfinishedAttempt(final long id, final long jobId, final AttemptStatus status, final Path logPath) {
     return new Attempt(
         id,
         jobId,
@@ -168,11 +162,7 @@ class DefaultJobPersistenceTest {
         null);
   }
 
-  private static Job createJob(final long id,
-                               final JobConfig jobConfig,
-                               final JobStatus status,
-                               final List<Attempt> attempts,
-                               final long time) {
+  private static Job createJob(final long id, final JobConfig jobConfig, final JobStatus status, final List<Attempt> attempts, final long time) {
     return createJob(id, jobConfig, status, attempts, time, SCOPE);
   }
 
@@ -207,8 +197,7 @@ class DefaultJobPersistenceTest {
     timeSupplier = mock(Supplier.class);
     when(timeSupplier.get()).thenReturn(NOW);
 
-    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-        DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
         DEFAULT_MINIMUM_RECENCY_COUNT);
   }
 
@@ -227,8 +216,7 @@ class DefaultJobPersistenceTest {
   }
 
   private Result<Record> getJobRecord(final long jobId) throws SQLException {
-    return jobDatabase.query(
-        ctx -> ctx.fetch(DefaultJobPersistence.BASE_JOB_SELECT_AND_JOIN + "WHERE jobs.id = ?", jobId));
+    return jobDatabase.query(ctx -> ctx.fetch(DefaultJobPersistence.BASE_JOB_SELECT_AND_JOIN + "WHERE jobs.id = ?", jobId));
   }
 
   @Test
@@ -274,27 +262,20 @@ class DefaultJobPersistenceTest {
     final int attemptNumber = jobPersistence.createAttempt(jobId, LOG_PATH);
     final Job created = jobPersistence.getJob(jobId);
     final SyncStats syncStats =
-        new SyncStats().withBytesEmitted(100L).withRecordsEmitted(9L).withRecordsCommitted(10L)
-            .withDestinationStateMessagesEmitted(1L)
-            .withSourceStateMessagesEmitted(4L).withMaxSecondsBeforeSourceStateMessageEmitted(5L)
-            .withMeanSecondsBeforeSourceStateMessageEmitted(2L)
-            .withMaxSecondsBetweenStateMessageEmittedandCommitted(10L)
-            .withMeanSecondsBetweenStateMessageEmittedandCommitted(3L);
-    final FailureReason failureReason1 = new FailureReason().withFailureOrigin(FailureOrigin.DESTINATION)
-        .withFailureType(FailureType.SYSTEM_ERROR)
+        new SyncStats().withBytesEmitted(100L).withRecordsEmitted(9L).withRecordsCommitted(10L).withDestinationStateMessagesEmitted(1L)
+            .withSourceStateMessagesEmitted(4L).withMaxSecondsBeforeSourceStateMessageEmitted(5L).withMeanSecondsBeforeSourceStateMessageEmitted(2L)
+            .withMaxSecondsBetweenStateMessageEmittedandCommitted(10L).withMeanSecondsBetweenStateMessageEmittedandCommitted(3L);
+    final FailureReason failureReason1 = new FailureReason().withFailureOrigin(FailureOrigin.DESTINATION).withFailureType(FailureType.SYSTEM_ERROR)
         .withExternalMessage("There was a normalization error");
-    final FailureReason failureReason2 = new FailureReason().withFailureOrigin(FailureOrigin.SOURCE)
-        .withFailureType(FailureType.CONFIG_ERROR)
+    final FailureReason failureReason2 = new FailureReason().withFailureOrigin(FailureOrigin.SOURCE).withFailureType(FailureType.CONFIG_ERROR)
         .withExternalMessage("There was another normalization error");
 
     final NormalizationSummary normalizationSummary =
-        new NormalizationSummary().withStartTime(10L).withEndTime(500L)
-            .withFailures(List.of(failureReason1, failureReason2));
+        new NormalizationSummary().withStartTime(10L).withEndTime(500L).withFailures(List.of(failureReason1, failureReason2));
     final StandardSyncOutput standardSyncOutput =
         new StandardSyncOutput().withStandardSyncSummary(new StandardSyncSummary().withTotalStats(syncStats))
             .withNormalizationSummary(normalizationSummary);
-    final JobOutput jobOutput = new JobOutput().withOutputType(JobOutput.OutputType.DISCOVER_CATALOG)
-        .withSync(standardSyncOutput);
+    final JobOutput jobOutput = new JobOutput().withOutputType(JobOutput.OutputType.DISCOVER_CATALOG).withSync(standardSyncOutput);
 
     when(timeSupplier.get()).thenReturn(Instant.ofEpochMilli(4242));
     jobPersistence.writeOutput(jobId, attemptNumber, jobOutput,
@@ -303,8 +284,7 @@ class DefaultJobPersistenceTest {
     final Job updated = jobPersistence.getJob(jobId);
 
     assertEquals(Optional.of(jobOutput), updated.getAttempts().get(0).getOutput());
-    assertNotEquals(created.getAttempts().get(0).getUpdatedAtInSecond(),
-        updated.getAttempts().get(0).getUpdatedAtInSecond());
+    assertNotEquals(created.getAttempts().get(0).getUpdatedAtInSecond(), updated.getAttempts().get(0).getUpdatedAtInSecond());
 
     final Optional<Record> record =
         jobDatabase.query(ctx -> ctx.fetch("SELECT id from attempts where job_id = ? AND attempt_number = ?", jobId,
@@ -323,8 +303,7 @@ class DefaultJobPersistenceTest {
     assertEquals(10L, storedSyncStats.getMaxSecondsBetweenStateMessageEmittedandCommitted());
     assertEquals(3L, storedSyncStats.getMeanSecondsBetweenStateMessageEmittedandCommitted());
 
-    final NormalizationSummary storedNormalizationSummary = jobPersistence.getNormalizationSummary(attemptId).stream()
-        .findFirst().get();
+    final NormalizationSummary storedNormalizationSummary = jobPersistence.getNormalizationSummary(attemptId).stream().findFirst().get();
     assertEquals(10L, storedNormalizationSummary.getStartTime());
     assertEquals(500L, storedNormalizationSummary.getEndTime());
     assertEquals(List.of(failureReason1, failureReason2), storedNormalizationSummary.getFailures());
@@ -344,8 +323,7 @@ class DefaultJobPersistenceTest {
 
     final Job updated = jobPersistence.getJob(jobId);
     assertEquals(Optional.of(failureSummary), updated.getAttempts().get(0).getFailureSummary());
-    assertNotEquals(created.getAttempts().get(0).getUpdatedAtInSecond(),
-        updated.getAttempts().get(0).getUpdatedAtInSecond());
+    assertNotEquals(created.getAttempts().get(0).getUpdatedAtInSecond(), updated.getAttempts().get(0).getUpdatedAtInSecond());
   }
 
   @Test
@@ -376,8 +354,7 @@ class DefaultJobPersistenceTest {
 
     final Optional<Job> actual = DefaultJobPersistence.getJobFromResult(getJobRecord(jobId));
 
-    final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-        NOW.getEpochSecond());
+    final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
     assertEquals(Optional.of(expected), actual);
   }
 
@@ -405,8 +382,7 @@ class DefaultJobPersistenceTest {
 
     jobPersistence.importDatabase("test", outputStreams);
 
-    final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(),
-        9999, 0);
+    final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(), 9999, 0);
 
     final Job actual = actualList.get(0);
     final Job expected = createJob(
@@ -430,8 +406,7 @@ class DefaultJobPersistenceTest {
     final Instant now = Instant.parse("2021-01-01T00:00:00Z");
     final Supplier<Instant> timeSupplier = incrementingSecondSupplier(now);
 
-    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-        DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
         DEFAULT_MINIMUM_RECENCY_COUNT);
     final long syncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
     final int syncJobAttemptNumber0 = jobPersistence.createAttempt(syncJobId, LOG_PATH);
@@ -466,11 +441,9 @@ class DefaultJobPersistenceTest {
     jobPersistence.succeedAttempt(newSyncJobId, newSyncJobAttemptNumber1);
 
     final Long maxEndedAtTimestamp =
-        jobs.get(0).getAttempts().stream().map(c -> c.getEndedAtInSecond().orElseThrow()).max(Long::compareTo)
-            .orElseThrow();
+        jobs.get(0).getAttempts().stream().map(c -> c.getEndedAtInSecond().orElseThrow()).max(Long::compareTo).orElseThrow();
 
-    final List<Job> secondQueryJobs = jobPersistence.listJobs(ConfigType.SYNC,
-        Instant.ofEpochSecond(maxEndedAtTimestamp));
+    final List<Job> secondQueryJobs = jobPersistence.listJobs(ConfigType.SYNC, Instant.ofEpochSecond(maxEndedAtTimestamp));
     assertEquals(secondQueryJobs.size(), 2);
     assertEquals(secondQueryJobs.get(0).getId(), syncJobId);
     assertEquals(secondQueryJobs.get(0).getAttempts().size(), 1);
@@ -484,16 +457,14 @@ class DefaultJobPersistenceTest {
     Long maxEndedAtTimestampAfterSecondQuery = -1L;
     for (final Job c : secondQueryJobs) {
       final List<Attempt> attempts = c.getAttempts();
-      final Long maxEndedAtTimestampForJob = attempts.stream()
-          .map(attempt -> attempt.getEndedAtInSecond().orElseThrow())
+      final Long maxEndedAtTimestampForJob = attempts.stream().map(attempt -> attempt.getEndedAtInSecond().orElseThrow())
           .max(Long::compareTo).orElseThrow();
       if (maxEndedAtTimestampForJob > maxEndedAtTimestampAfterSecondQuery) {
         maxEndedAtTimestampAfterSecondQuery = maxEndedAtTimestampForJob;
       }
     }
 
-    assertEquals(0,
-        jobPersistence.listJobs(ConfigType.SYNC, Instant.ofEpochSecond(maxEndedAtTimestampAfterSecondQuery)).size());
+    assertEquals(0, jobPersistence.listJobs(ConfigType.SYNC, Instant.ofEpochSecond(maxEndedAtTimestampAfterSecondQuery)).size());
   }
 
   @Test
@@ -501,8 +472,7 @@ class DefaultJobPersistenceTest {
   void testListAttemptsWithJobInfo() throws IOException {
     final Instant now = Instant.parse("2021-01-01T00:00:00Z");
     final Supplier<Instant> timeSupplier = incrementingSecondSupplier(now);
-    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-        DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+    jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
         DEFAULT_MINIMUM_RECENCY_COUNT);
 
     final long job1 = jobPersistence.enqueueJob(SCOPE + "-1", SYNC_JOB_CONFIG).orElseThrow();
@@ -523,8 +493,7 @@ class DefaultJobPersistenceTest {
     jobPersistence.succeedAttempt(job1, job1Attempt3);
     jobPersistence.succeedAttempt(job2, job2Attempt3);
 
-    final List<AttemptWithJobInfo> allAttempts = jobPersistence.listAttemptsWithJobInfo(ConfigType.SYNC,
-        Instant.ofEpochSecond(0));
+    final List<AttemptWithJobInfo> allAttempts = jobPersistence.listAttemptsWithJobInfo(ConfigType.SYNC, Instant.ofEpochSecond(0));
     assertEquals(6, allAttempts.size());
 
     assertEquals(job1, allAttempts.get(0).getJobInfo().getId());
@@ -659,8 +628,7 @@ class DefaultJobPersistenceTest {
       assertTrue(defaultWorkflowId.isEmpty());
 
       jobDatabase.query(ctx -> ctx.execute(
-          "UPDATE attempts SET temporal_workflow_id = '56a81f3a-006c-42d7-bce2-29d675d08ea4' WHERE job_id = ? AND attempt_number =?",
-          jobId,
+          "UPDATE attempts SET temporal_workflow_id = '56a81f3a-006c-42d7-bce2-29d675d08ea4' WHERE job_id = ? AND attempt_number =?", jobId,
           attemptNumber));
       final var workflowId = jobPersistence.getAttemptTemporalWorkflowId(jobId, attemptNumber).get();
       assertEquals(workflowId, "56a81f3a-006c-42d7-bce2-29d675d08ea4");
@@ -794,8 +762,7 @@ class DefaultJobPersistenceTest {
       final int attemptNumber2 = jobPersistence.createAttempt(jobId, LOG_PATH);
       final Job jobAfterTwoAttempts = jobPersistence.getJob(jobId);
       assertEquals(1, attemptNumber2);
-      assertEquals(Sets.newHashSet(0L, 1L),
-          jobAfterTwoAttempts.getAttempts().stream().map(Attempt::getId).collect(Collectors.toSet()));
+      assertEquals(Sets.newHashSet(0L, 1L), jobAfterTwoAttempts.getAttempts().stream().map(Attempt::getId).collect(Collectors.toSet()));
     }
 
     @Test
@@ -847,8 +814,7 @@ class DefaultJobPersistenceTest {
       final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
 
       final Job actual = jobPersistence.getJob(jobId);
-      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(expected, actual);
     }
 
@@ -862,8 +828,7 @@ class DefaultJobPersistenceTest {
       assertTrue(jobId2.isEmpty());
 
       final Job actual = jobPersistence.getJob(jobId1.get());
-      final Job expected = createJob(jobId1.get(), SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId1.get(), SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(expected, actual);
     }
 
@@ -878,8 +843,7 @@ class DefaultJobPersistenceTest {
       assertTrue(jobId2.isPresent());
 
       final Job actual = jobPersistence.getJob(jobId2.get());
-      final Job expected = createJob(jobId2.get(), SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId2.get(), SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(expected, actual);
     }
 
@@ -941,8 +905,7 @@ class DefaultJobPersistenceTest {
       final long jobId2 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
 
       final Optional<Job> actual = jobPersistence.getLastReplicationJob(CONNECTION_ID);
-      final Job expected = createJob(jobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          afterNow.getEpochSecond());
+      final Job expected = createJob(jobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), afterNow.getEpochSecond());
 
       assertEquals(Optional.of(expected), actual);
     }
@@ -958,8 +921,7 @@ class DefaultJobPersistenceTest {
       final long jobId2 = jobPersistence.enqueueJob(SCOPE, RESET_JOB_CONFIG).orElseThrow();
 
       final Optional<Job> actual = jobPersistence.getLastReplicationJob(CONNECTION_ID);
-      final Job expected = createJob(jobId2, RESET_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          afterNow.getEpochSecond());
+      final Job expected = createJob(jobId2, RESET_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), afterNow.getEpochSecond());
 
       assertEquals(Optional.of(expected), actual);
     }
@@ -995,8 +957,7 @@ class DefaultJobPersistenceTest {
       jobPersistence.failJob(jobId2);
 
       final Optional<Job> actual = jobPersistence.getLastSyncJob(CONNECTION_ID);
-      final Job expected = createJob(jobId2, SYNC_JOB_CONFIG, JobStatus.FAILED, List.of(attempt),
-          afterNow.getEpochSecond());
+      final Job expected = createJob(jobId2, SYNC_JOB_CONFIG, JobStatus.FAILED, List.of(attempt), afterNow.getEpochSecond());
 
       assertEquals(Optional.of(expected), actual);
     }
@@ -1183,8 +1144,7 @@ class DefaultJobPersistenceTest {
     void testGetFirstSyncJobForConnectionId() throws IOException {
       final long jobId1 = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
       jobPersistence.succeedAttempt(jobId1, jobPersistence.createAttempt(jobId1, LOG_PATH));
-      final List<AttemptWithJobInfo> attemptsWithJobInfo = jobPersistence.listAttemptsWithJobInfo(
-          SYNC_JOB_CONFIG.getConfigType(), Instant.EPOCH);
+      final List<AttemptWithJobInfo> attemptsWithJobInfo = jobPersistence.listAttemptsWithJobInfo(SYNC_JOB_CONFIG.getConfigType(), Instant.EPOCH);
       final List<Attempt> attempts = Collections.singletonList(attemptsWithJobInfo.get(0).getAttempt());
 
       final Instant afterNow = NOW.plusSeconds(1000);
@@ -1211,8 +1171,7 @@ class DefaultJobPersistenceTest {
 
       final Optional<Job> actual = jobPersistence.getNextJob();
 
-      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(Optional.of(expected), actual);
     }
 
@@ -1262,8 +1221,7 @@ class DefaultJobPersistenceTest {
 
       final Optional<Job> actual = jobPersistence.getNextJob();
 
-      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(Optional.of(expected), actual);
     }
 
@@ -1279,8 +1237,7 @@ class DefaultJobPersistenceTest {
 
       final Optional<Job> actual = jobPersistence.getNextJob();
 
-      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(Optional.of(expected), actual);
     }
 
@@ -1297,8 +1254,7 @@ class DefaultJobPersistenceTest {
 
       final Optional<Job> actual = jobPersistence.getNextJob();
 
-      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId2, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
       assertEquals(Optional.of(expected), actual);
     }
 
@@ -1349,8 +1305,7 @@ class DefaultJobPersistenceTest {
         jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG);
       }
 
-      final Long actualJobCount = jobPersistence.getJobCount(Set.of(SPEC_JOB_CONFIG.getConfigType()),
-          CONNECTION_ID.toString());
+      final Long actualJobCount = jobPersistence.getJobCount(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString());
 
       assertEquals(numJobsToCreate, actualJobCount);
     }
@@ -1364,8 +1319,7 @@ class DefaultJobPersistenceTest {
       jobPersistence.enqueueJob(otherConnectionId1.toString(), SPEC_JOB_CONFIG);
       jobPersistence.enqueueJob(otherConnectionId2.toString(), SPEC_JOB_CONFIG);
 
-      final Long actualJobCount = jobPersistence.getJobCount(Set.of(SPEC_JOB_CONFIG.getConfigType()),
-          CONNECTION_ID.toString());
+      final Long actualJobCount = jobPersistence.getJobCount(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString());
 
       assertEquals(0, actualJobCount);
     }
@@ -1396,8 +1350,7 @@ class DefaultJobPersistenceTest {
       final int pagesize = 10;
       final int offset = 3;
 
-      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(),
-          pagesize, offset);
+      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(), pagesize, offset);
       assertEquals(pagesize, actualList.size());
       assertEquals(ids.get(ids.size() - 1 - offset), actualList.get(0).getId());
     }
@@ -1414,11 +1367,9 @@ class DefaultJobPersistenceTest {
       }
       final int pagesize = 200;
       final int offset = 0;
-      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(),
-          pagesize, offset);
+      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(), pagesize, offset);
       for (int i = 0; i < 100; i++) {
-        assertEquals(ids.get(ids.size() - (i + 1)), actualList.get(i).getId(),
-            "Job ids should have been in order but weren't.");
+        assertEquals(ids.get(ids.size() - (i + 1)), actualList.get(i).getId(), "Job ids should have been in order but weren't.");
       }
     }
 
@@ -1427,12 +1378,10 @@ class DefaultJobPersistenceTest {
     void testListJobs() throws IOException {
       final long jobId = jobPersistence.enqueueJob(SCOPE, SPEC_JOB_CONFIG).orElseThrow();
 
-      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(),
-          9999, 0);
+      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(), 9999, 0);
 
       final Job actual = actualList.get(0);
-      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(),
-          NOW.getEpochSecond());
+      final Job expected = createJob(jobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond());
 
       assertEquals(1, actualList.size());
       assertEquals(expected, actual);
@@ -1448,12 +1397,10 @@ class DefaultJobPersistenceTest {
       jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
 
       final List<Job> actualList =
-          jobPersistence.listJobs(Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()),
-              CONNECTION_ID.toString(), 9999, 0);
+          jobPersistence.listJobs(Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(), 9999, 0);
 
       final List<Job> expectedList =
-          List.of(
-              createJob(checkJobId, CHECK_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond()),
+          List.of(createJob(checkJobId, CHECK_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond()),
               createJob(specJobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Collections.emptyList(), NOW.getEpochSecond()));
 
       assertEquals(expectedList, actualList);
@@ -1472,8 +1419,7 @@ class DefaultJobPersistenceTest {
 
       jobPersistence.succeedAttempt(jobId, attemptNumber1);
 
-      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(),
-          9999, 0);
+      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(), 9999, 0);
 
       final Job actual = actualList.get(0);
       final Job expected = createJob(
@@ -1508,8 +1454,7 @@ class DefaultJobPersistenceTest {
       final var job2Attempt1 = jobPersistence.createAttempt(jobId2, job2Attempt1LogPath);
       jobPersistence.succeedAttempt(jobId2, job2Attempt1);
 
-      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(),
-          9999, 0);
+      final List<Job> actualList = jobPersistence.listJobs(SPEC_JOB_CONFIG.getConfigType(), CONNECTION_ID.toString(), 9999, 0);
 
       assertEquals(2, actualList.size());
       assertEquals(jobId2, actualList.get(0).getId());
@@ -1533,8 +1478,7 @@ class DefaultJobPersistenceTest {
 
       final int includingIdIndex = 90;
       final int pageSize = 25;
-      final List<Job> actualList = jobPersistence.listJobsIncludingId(
-          Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()),
+      final List<Job> actualList = jobPersistence.listJobsIncludingId(Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()),
           CONNECTION_ID.toString(), ids.get(includingIdIndex), pageSize);
       final List<Long> expectedJobIds = Lists.reverse(ids.subList(ids.size() - pageSize, ids.size()));
       assertEquals(expectedJobIds, actualList.stream().map(Job::getId).toList());
@@ -1559,8 +1503,7 @@ class DefaultJobPersistenceTest {
       // including id is on the second page, so response should contain two pages of jobs
       final int includingIdIndex = 60;
       final int pageSize = 25;
-      final List<Job> actualList = jobPersistence.listJobsIncludingId(
-          Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()),
+      final List<Job> actualList = jobPersistence.listJobsIncludingId(Set.of(SPEC_JOB_CONFIG.getConfigType(), CHECK_JOB_CONFIG.getConfigType()),
           CONNECTION_ID.toString(), ids.get(includingIdIndex), pageSize);
       final List<Long> expectedJobIds = Lists.reverse(ids.subList(ids.size() - (pageSize * 2), ids.size()));
       assertEquals(expectedJobIds, actualList.stream().map(Job::getId).toList());
@@ -1573,12 +1516,10 @@ class DefaultJobPersistenceTest {
         jobPersistence.enqueueJob(CONNECTION_ID.toString(), SPEC_JOB_CONFIG);
       }
 
-      final long otherConnectionJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SPEC_JOB_CONFIG)
-          .orElseThrow();
+      final long otherConnectionJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SPEC_JOB_CONFIG).orElseThrow();
 
       final List<Job> actualList =
-          jobPersistence.listJobsIncludingId(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(),
-              otherConnectionJobId, 25);
+          jobPersistence.listJobsIncludingId(Set.of(SPEC_JOB_CONFIG.getConfigType()), CONNECTION_ID.toString(), otherConnectionJobId, 25);
       assertEquals(List.of(), actualList);
     }
 
@@ -1629,20 +1570,15 @@ class DefaultJobPersistenceTest {
       final List<Job> allPendingJobs = jobPersistence.listJobsWithStatus(JobStatus.PENDING);
 
       final Job expectedPendingSpecJob =
-          createJob(pendingSpecJobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(),
-              SPEC_SCOPE);
+          createJob(pendingSpecJobId, SPEC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), SPEC_SCOPE);
       final Job expectedPendingCheckJob =
-          createJob(pendingCheckJobId, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(),
-              CHECK_SCOPE);
+          createJob(pendingCheckJobId, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), CHECK_SCOPE);
       final Job expectedPendingSyncJob =
-          createJob(pendingSyncJobId, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(),
-              SYNC_SCOPE);
+          createJob(pendingSyncJobId, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), SYNC_SCOPE);
 
-      final List<Job> allPendingSyncAndSpecJobs = jobPersistence.listJobsWithStatus(
-          Set.of(ConfigType.GET_SPEC, ConfigType.SYNC), JobStatus.PENDING);
+      final List<Job> allPendingSyncAndSpecJobs = jobPersistence.listJobsWithStatus(Set.of(ConfigType.GET_SPEC, ConfigType.SYNC), JobStatus.PENDING);
 
-      final List<Job> incompleteJobs = jobPersistence.listJobsWithStatus(SPEC_JOB_CONFIG.getConfigType(),
-          JobStatus.INCOMPLETE);
+      final List<Job> incompleteJobs = jobPersistence.listJobsWithStatus(SPEC_JOB_CONFIG.getConfigType(), JobStatus.INCOMPLETE);
       final Job actualIncompleteJob = incompleteJobs.get(0);
       final Job expectedIncompleteJob = createJob(
           failedSpecJobId,
@@ -1653,10 +1589,8 @@ class DefaultJobPersistenceTest {
           NOW.getEpochSecond(),
           SPEC_SCOPE);
 
-      assertEquals(Sets.newHashSet(expectedPendingCheckJob, expectedPendingSpecJob, expectedPendingSyncJob),
-          Sets.newHashSet(allPendingJobs));
-      assertEquals(Sets.newHashSet(expectedPendingSpecJob, expectedPendingSyncJob),
-          Sets.newHashSet(allPendingSyncAndSpecJobs));
+      assertEquals(Sets.newHashSet(expectedPendingCheckJob, expectedPendingSpecJob, expectedPendingSyncJob), Sets.newHashSet(allPendingJobs));
+      assertEquals(Sets.newHashSet(expectedPendingSpecJob, expectedPendingSyncJob), Sets.newHashSet(allPendingSyncAndSpecJobs));
 
       assertEquals(1, incompleteJobs.size());
       assertEquals(expectedIncompleteJob, actualIncompleteJob);
@@ -1669,45 +1603,36 @@ class DefaultJobPersistenceTest {
       final UUID otherConnectionId = UUID.randomUUID();
 
       // desired connection, statuses, and config types
-      final long desiredJobId1 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG)
-          .orElseThrow();
+      final long desiredJobId1 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG).orElseThrow();
       jobPersistence.succeedAttempt(desiredJobId1, jobPersistence.createAttempt(desiredJobId1, LOG_PATH));
-      final long desiredJobId2 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG)
-          .orElseThrow();
-      final long desiredJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG)
-          .orElseThrow();
+      final long desiredJobId2 = jobPersistence.enqueueJob(desiredConnectionId.toString(), SYNC_JOB_CONFIG).orElseThrow();
+      final long desiredJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG).orElseThrow();
       jobPersistence.succeedAttempt(desiredJobId3, jobPersistence.createAttempt(desiredJobId3, LOG_PATH));
-      final long desiredJobId4 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG)
-          .orElseThrow();
+      final long desiredJobId4 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG).orElseThrow();
 
       // right connection id and status, wrong config type
       jobPersistence.enqueueJob(desiredConnectionId.toString(), SPEC_JOB_CONFIG).orElseThrow();
       // right config type and status, wrong connection id
       jobPersistence.enqueueJob(otherConnectionId.toString(), SYNC_JOB_CONFIG).orElseThrow();
       // right connection id and config type, wrong status
-      final long otherJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG)
-          .orElseThrow();
+      final long otherJobId3 = jobPersistence.enqueueJob(desiredConnectionId.toString(), CHECK_JOB_CONFIG).orElseThrow();
       jobPersistence.failAttempt(otherJobId3, jobPersistence.createAttempt(otherJobId3, LOG_PATH));
 
       final List<Job> actualJobs = jobPersistence.listJobsForConnectionWithStatuses(desiredConnectionId,
-          Set.of(ConfigType.SYNC, ConfigType.CHECK_CONNECTION_DESTINATION),
-          Set.of(JobStatus.PENDING, JobStatus.SUCCEEDED));
+          Set.of(ConfigType.SYNC, ConfigType.CHECK_CONNECTION_DESTINATION), Set.of(JobStatus.PENDING, JobStatus.SUCCEEDED));
 
       final Job expectedDesiredJob1 = createJob(desiredJobId1, SYNC_JOB_CONFIG, JobStatus.SUCCEEDED,
           Lists.newArrayList(createAttempt(0L, desiredJobId1, AttemptStatus.SUCCEEDED, LOG_PATH)),
           NOW.getEpochSecond(), desiredConnectionId.toString());
       final Job expectedDesiredJob2 =
-          createJob(desiredJobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(),
-              desiredConnectionId.toString());
+          createJob(desiredJobId2, SYNC_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), desiredConnectionId.toString());
       final Job expectedDesiredJob3 = createJob(desiredJobId3, CHECK_JOB_CONFIG, JobStatus.SUCCEEDED,
           Lists.newArrayList(createAttempt(0L, desiredJobId3, AttemptStatus.SUCCEEDED, LOG_PATH)),
           NOW.getEpochSecond(), desiredConnectionId.toString());
       final Job expectedDesiredJob4 =
-          createJob(desiredJobId4, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(),
-              desiredConnectionId.toString());
+          createJob(desiredJobId4, CHECK_JOB_CONFIG, JobStatus.PENDING, Lists.newArrayList(), NOW.getEpochSecond(), desiredConnectionId.toString());
 
-      assertEquals(Sets.newHashSet(expectedDesiredJob1, expectedDesiredJob2, expectedDesiredJob3, expectedDesiredJob4),
-          Sets.newHashSet(actualJobs));
+      assertEquals(Sets.newHashSet(expectedDesiredJob1, expectedDesiredJob2, expectedDesiredJob3, expectedDesiredJob4), Sets.newHashSet(actualJobs));
     }
 
   }
@@ -1750,10 +1675,7 @@ class DefaultJobPersistenceTest {
   @DisplayName("When purging job history")
   class PurgeJobHistory {
 
-    private Job persistJobForJobHistoryTesting(final String scope,
-                                               final JobConfig jobConfig,
-                                               final JobStatus status,
-                                               final LocalDateTime runDate)
+    private Job persistJobForJobHistoryTesting(final String scope, final JobConfig jobConfig, final JobStatus status, final LocalDateTime runDate)
         throws IOException, SQLException {
       final Optional<Long> id = jobDatabase.query(
           ctx -> ctx.fetch(
@@ -1772,10 +1694,7 @@ class DefaultJobPersistenceTest {
       return jobPersistence.getJob(id.get());
     }
 
-    private void persistAttemptForJobHistoryTesting(final Job job,
-                                                    final String logPath,
-                                                    final LocalDateTime runDate,
-                                                    final boolean shouldHaveState)
+    private void persistAttemptForJobHistoryTesting(final Job job, final String logPath, final LocalDateTime runDate, final boolean shouldHaveState)
         throws IOException, SQLException {
       final String attemptOutputWithState = "{\n"
           + "  \"sync\": {\n"
@@ -1808,11 +1727,11 @@ class DefaultJobPersistenceTest {
      * controlling deletion logic. Thus, the test case injects overrides for those constants, testing a
      * comprehensive set of combinations to make sure that the logic is robust to reasonable
      * configurations. Extreme configurations such as zero-day retention period are not covered.
-     * <p>
+     *
      * Business rules for deletions. 1. Job must be older than X days or its conn has excessive number
      * of jobs 2. Job cannot be one of the last N jobs on that conn (last N jobs are always kept). 3.
      * Job cannot be holding the most recent saved state (most recent saved state is always kept).
-     * <p>
+     *
      * Testing Goal: Set up jobs according to the parameters passed in. Then delete according to the
      * rules, and make sure the right number of jobs are left. Against one connection/scope,
      * <ol>
@@ -1841,6 +1760,7 @@ class DefaultJobPersistenceTest {
      *        parameters. This was calculated by a human based on understanding the requirements.
      * @param goalOfTestScenario Description of the purpose of that test scenario, so it's easier to
      *        maintain and understand failures.
+     *
      */
     @DisplayName("Should purge older job history but maintain certain more recent ones")
     @ParameterizedTest
@@ -1883,10 +1803,8 @@ class DefaultJobPersistenceTest {
       final List<Job> allJobs = new ArrayList<>();
       final List<Job> decoyJobs = new ArrayList<>();
       for (int i = 0; i < numJobs; i++) {
-        allJobs.add(
-            persistJobForJobHistoryTesting(CURRENT_SCOPE, SYNC_JOB_CONFIG, JobStatus.FAILED, fakeNow.minusDays(i)));
-        decoyJobs.add(
-            persistJobForJobHistoryTesting(DECOY_SCOPE, SYNC_JOB_CONFIG, JobStatus.FAILED, fakeNow.minusDays(i)));
+        allJobs.add(persistJobForJobHistoryTesting(CURRENT_SCOPE, SYNC_JOB_CONFIG, JobStatus.FAILED, fakeNow.minusDays(i)));
+        decoyJobs.add(persistJobForJobHistoryTesting(DECOY_SCOPE, SYNC_JOB_CONFIG, JobStatus.FAILED, fakeNow.minusDays(i)));
       }
 
       // At least one job should have state. Find the desired job and add state to it.
@@ -1906,18 +1824,15 @@ class DefaultJobPersistenceTest {
       final List<Job> afterPurge = jobPersistence.listJobs(ConfigType.SYNC, CURRENT_SCOPE, 9999, 0);
 
       // Test - contains expected number of jobs and no more than that
-      assertEquals(expectedAfterPurge, afterPurge.size(),
-          goalOfTestScenario + " - Incorrect number of jobs remain after deletion.");
+      assertEquals(expectedAfterPurge, afterPurge.size(), goalOfTestScenario + " - Incorrect number of jobs remain after deletion.");
 
       // Test - most-recent are actually the most recent by date (see above, reverse order)
       for (int i = 0; i < Math.min(ageCutoff, recencyCutoff); i++) {
-        assertEquals(allJobs.get(i).getId(), afterPurge.get(i).getId(),
-            goalOfTestScenario + " - Incorrect sort order after deletion.");
+        assertEquals(allJobs.get(i).getId(), afterPurge.get(i).getId(), goalOfTestScenario + " - Incorrect sort order after deletion.");
       }
 
       // Test - job with latest state is always kept despite being older than some cutoffs
-      assertTrue(afterPurge.contains(lastJobWithState),
-          goalOfTestScenario + " - Missing last job with saved state after deletion.");
+      assertTrue(afterPurge.contains(lastJobWithState), goalOfTestScenario + " - Missing last job with saved state after deletion.");
     }
 
     private Job addStateToJob(final Job job) throws IOException, SQLException {
@@ -1935,19 +1850,15 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should list only job statuses and timestamps of specified connection id")
     void testConnectionIdFiltering() throws IOException {
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-          DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
           DEFAULT_MINIMUM_RECENCY_COUNT);
 
       // create a connection with a non-relevant connection id that should be ignored for the duration of
       // the test
-      final long wrongConnectionSyncJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SYNC_JOB_CONFIG)
-          .orElseThrow();
+      final long wrongConnectionSyncJobId = jobPersistence.enqueueJob(UUID.randomUUID().toString(), SYNC_JOB_CONFIG).orElseThrow();
       final int wrongSyncJobAttemptNumber0 = jobPersistence.createAttempt(wrongConnectionSyncJobId, LOG_PATH);
       jobPersistence.failAttempt(wrongConnectionSyncJobId, wrongSyncJobAttemptNumber0);
-      assertEquals(0,
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              Instant.EPOCH).size());
+      assertEquals(0, jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH).size());
 
       // create a connection with relevant connection id
       final long syncJobId = jobPersistence.enqueueJob(SCOPE, SYNC_JOB_CONFIG).orElseThrow();
@@ -1956,8 +1867,7 @@ class DefaultJobPersistenceTest {
 
       // check to see current status of only relevantly scoped job
       final List<JobWithStatusAndTimestamp> jobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              Instant.EPOCH);
+          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
       assertEquals(jobs.size(), 1);
       assertEquals(JobStatus.INCOMPLETE, jobs.get(0).getStatus());
     }
@@ -1965,8 +1875,7 @@ class DefaultJobPersistenceTest {
     @Test
     @DisplayName("Should list jobs statuses filtered by different timestamps")
     void testTimestampFiltering() throws IOException {
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-          DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
           DEFAULT_MINIMUM_RECENCY_COUNT);
 
       // Create and fail initial job
@@ -1977,8 +1886,7 @@ class DefaultJobPersistenceTest {
 
       // Check to see current status of all jobs from beginning of time, expecting only 1 job
       final List<JobWithStatusAndTimestamp> initialJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              Instant.EPOCH);
+          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
       assertEquals(initialJobs.size(), 1);
       assertEquals(JobStatus.FAILED, initialJobs.get(0).getStatus());
 
@@ -1994,16 +1902,14 @@ class DefaultJobPersistenceTest {
       // Check to see current status of all jobs from beginning of time, expecting both jobs in createAt
       // descending order (most recent first)
       final List<JobWithStatusAndTimestamp> allQueryJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              Instant.EPOCH);
+          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
       assertEquals(2, allQueryJobs.size());
       assertEquals(JobStatus.SUCCEEDED, allQueryJobs.get(0).getStatus());
       assertEquals(JobStatus.FAILED, allQueryJobs.get(1).getStatus());
 
       // Look up jobs with a timestamp after the first job. Expecting only the second job status
       final List<JobWithStatusAndTimestamp> timestampFilteredJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              timeAfterFirstJob);
+          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), timeAfterFirstJob);
       assertEquals(1, timestampFilteredJobs.size());
       assertEquals(JobStatus.SUCCEEDED, timestampFilteredJobs.get(0).getStatus());
       // TODO: issues will be fixed in scope of https://github.com/airbytehq/airbyte/issues/13192
@@ -2016,16 +1922,14 @@ class DefaultJobPersistenceTest {
       // second job. Expecting no job status output
       final Instant timeAfterSecondJob = timeAfterFirstJob.plusSeconds(60);
       assertEquals(0,
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              timeAfterSecondJob).size());
+          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), timeAfterSecondJob).size());
     }
 
     @Test
     @DisplayName("Should list jobs statuses of differing status types")
     void testMultipleJobStatusTypes() throws IOException {
       final Supplier<Instant> timeSupplier = incrementingSecondSupplier(NOW);
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-          DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
           DEFAULT_MINIMUM_RECENCY_COUNT);
 
       // Create and fail initial job
@@ -2047,8 +1951,7 @@ class DefaultJobPersistenceTest {
       // Check to see current status of all jobs from beginning of time, expecting all jobs in createAt
       // descending order (most recent first)
       final List<JobWithStatusAndTimestamp> allJobs =
-          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC),
-              Instant.EPOCH);
+          jobPersistence.listJobStatusAndTimestampWithConnection(CONNECTION_ID, Sets.newHashSet(ConfigType.SYNC), Instant.EPOCH);
       assertEquals(3, allJobs.size());
       assertEquals(JobStatus.CANCELLED, allJobs.get(0).getStatus());
       assertEquals(JobStatus.SUCCEEDED, allJobs.get(1).getStatus());
@@ -2060,8 +1963,7 @@ class DefaultJobPersistenceTest {
     void testMultipleConfigTypes() throws IOException {
       final Set<ConfigType> configTypes = Sets.newHashSet(ConfigType.GET_SPEC, ConfigType.CHECK_CONNECTION_DESTINATION);
       final Supplier<Instant> timeSupplier = incrementingSecondSupplier(NOW);
-      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS,
-          DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
+      jobPersistence = new DefaultJobPersistence(jobDatabase, timeSupplier, DEFAULT_MINIMUM_AGE_IN_DAYS, DEFAULT_EXCESSIVE_NUMBER_OF_JOBS,
           DEFAULT_MINIMUM_RECENCY_COUNT);
 
       // pending status
